--- a/index.html
+++ b/index.html
@@ -200,7 +200,17 @@
 
     <button class="btn" onclick="mostrarCarta()">💌 Ler Carta de Amor</button>
     <div class="carta" id="carta">
-      <p>Amor, você é tudo pra mim. Cada dia ao seu lado é um presente que eu quero guardar para sempre no meu coração. Obrigado por me fazer tão feliz! 💖</p>
+      <p>Desde o dia 20 de novembro de 2023, a minha vida mudou muito. Foi ali que tudo começou onde aprendi a amar e respeitar. Nossa relação foi construída com carinho, parceria e a certeza de que Deus cruzou nossos caminhos por um propósito maior.
+
+Cada viagem que fizemos, cada ida à praia, cada filme ou vídeo no YouTube que assistimos... são momentos simples, mas que têm um valor imenso pra mim. Porque o que realmente importa é estar com você.
+
+Eu admiro profundamente a mulher forte e determinada que você é. Sua fé, sua coragem e sua forma de olhar a vida me inspiram todos os dias. Mesmo agora, enquanto enfrentamos um momento difícil, eu vejo o quanto seu amor é verdadeiro. Por mais que às vezes pareçamos distantes, eu jamais vou querer ficar longe de você.
+
+Quero que você saiba que, por você, eu estou disposto a lutar. A me reconstruir. A ser um homem melhor — para Deus e para você. Porque eu nunca desistiria da gente. Nosso amor vale cada esforço, cada recomeço, cada oração.
+
+Olhando para o futuro, eu só consigo imaginar uma vida ao seu lado. Quero que você seja a mãe dos meus filhos, minha esposa, minha companheira para sempre. E que possamos, juntos, viver uma vida de propósito, amor e fé.
+
+Eu te amo. Obrigado por me fazer tão feliz! 💖</p>
     </div>
 
     <button class="btn" onclick="mostrarGaleria()">📸 Ver mais fotos</button>
